syntax="proto3";
option go_package = "../pb;pb";
message RegisterParams{
  string account = 1;
  string password = 2;
  int32 loginPlatform = 3;
  string smsCode = 4;
}
message RegisterResponse{
  string uid = 1;
}

service UserService{
  rpc Register(RegisterParams) returns(RegisterResponse);
}